--- a/styles-quemsomos.css
+++ b/styles-quemsomos.css
@@ -5,81 +5,83 @@ body{
 }
 
 .cabecalho{
-    margin: 10px auto;
-    margin-right: 110px;
-    margin-left: 142px;
+    margin:10px auto;
+    margin-right:  9.3%;
+    margin-left: 11.9%;
 }
 
+
 .cabecalho .link{
-    font-family: Helvetica;
+    font-family:Helvetica;
     margin-left: 70%;
-    margin-top: -16px;
-    margin-bottom: 26px;
+    margin-top: -1.7%;
+    margin-bottom: 2.7%;
 }
 
 .cabecalho .link a{
-    margin:4px;
+    margin: 4px;
 }
 
 .cabecalho .logo{
-    margin-top: 20px;
-    margin-bottom: -20px;
+    margin-top: 2.2%;
+    margin-bottom: -2.2%;
+    margin-left: -0.2%;
 }
 
 .corpo .quem-somos {
-    margin-left: 141px;
+    margin-left: 11.8%;
     font-family: Verdana;
-    margin-right: 145px;
-    margin-top: 60px;
-    margin-bottom: 15px;
+    margin-right: 12%;
+    margin-top: 5.02%;
+    margin-bottom: 1.2%;
     font-size: 16px;
 }
 
 .corpo .paragrafo{
-    margin-left: 141px;
-    margin-right: 145px;
+    margin-left: 11.8%;
+    margin-right: 13.2%;
 }
 
 .corpo .motivos .motivos-lista{
-    margin-bottom: 30px;
+    margin-bottom: 2.5%;
     font-family: Verdana;
-    margin-left: 141px;
-    margin-right: 145px;
+    margin-left: 11.8%;
+    margin-right: 13.2%;
     font-size: 16px;
 }
 
 .corpo .motivos .lista{
-    margin-right: 145px;
-    margin-left: 141px;
-    margin-bottom: 15px;
+    margin-right: 13.2%;
+    margin-left: 11.8%;
+    margin-bottom: 1.25%;
 }
 
 .corpo .motivos .lista ul{
-    margin-top: -12px;
-    margin-bottom: 10px;
+    margin-top: -1.33%;
+    margin-bottom: 1.1%;
 }
 
 .rodape{
-    margin-top: 50px;
+    margin-top: 4.15%;
     text-align: center;
     font-size: 8px;
     font-family: Verdana;
 }
 
 hr{
-    margin-right: 145px;
-    margin-left: 141px;
+    margin-right: 13.2%;
+    margin-left: 11.8%;
 }
 
 .objetivos .obj{
-    margin-top: 15px;
+    margin-top: 1.3%;
     font-family: Verdana;
     font-size: 16px;
-    margin-left: 141px;
-    margin-right: 145px;
+    margin-left: 11.8%;
+    margin-right: 13.2%;
 }
 
 .objetivos .texto-obj{
-    margin-right: 145px;
-    margin-left: 141px;
+    margin-right: 13.2%;
+    margin-left: 11.8%;
 }
