--- a/style-index.css
+++ b/style-index.css
@@ -1,6 +1,6 @@
 body{   
     margin:10px auto;
-    max-width: 80%;
+    max-width: auto;
     background-image:url(./imagens/fundo.png);
 }
 
@@ -8,13 +8,13 @@ body{
 .cabecalho{
     margin:10px auto;
     margin-right:  9.3%;
-    margin-left: 11.9%;
+    margin-left: 13.9%;
 }
 
 
 .cabecalho .link{
     font-family:Helvetica;
-    margin-left: 71%;
+    margin-left: 68.6%;
     margin-top: -1.7%;
     margin-bottom: 2.7%;
 }
@@ -30,14 +30,14 @@ body{
 }
 
 .corpo{
-    padding-top:0.5%;
-    margin-left:12%;
+    padding-top:0.3%;
+    margin-left:14%;
 }
 
 .texto .titulo{
     font-family: Verdana;
     font-size: 16px;
-    margin-left: 12%;
+    margin-left: 14%;
 }
 
 
@@ -49,6 +49,6 @@ body{
 }
 
 .texto .paragrafo{
-    margin-left: 12%;
-    margin-right: 12.1%;
+    margin-left: 14%;
+    margin-right: 15%;
 }
