--- a/styles-quemsomos.css
+++ b/styles-quemsomos.css
@@ -1,19 +1,20 @@
-body{
+body{   
     margin:10px auto;
-    max-width: 80%;
-    background-image: url(./imagens/fundo2.png);
+    max-width: auto;
+    background-image:url(./imagens/fundo2.png);
 }
+
 
 .cabecalho{
     margin:10px auto;
     margin-right:  9.3%;
-    margin-left: 11.9%;
+    margin-left: 13.9%;
 }
 
 
 .cabecalho .link{
     font-family:Helvetica;
-    margin-left: 70%;
+    margin-left: 68.6%;
     margin-top: -1.7%;
     margin-bottom: 2.7%;
 }
@@ -25,11 +26,11 @@ body{
 .cabecalho .logo{
     margin-top: 2.2%;
     margin-bottom: -2.2%;
-    margin-left: -0.2%;
+    margin-left: 0.1%;
 }
 
 .corpo .quem-somos {
-    margin-left: 11.8%;
+    margin-left: 14%;
     font-family: Verdana;
     margin-right: 12%;
     margin-top: 5.02%;
@@ -38,21 +39,21 @@ body{
 }
 
 .corpo .paragrafo{
-    margin-left: 11.8%;
-    margin-right: 13.2%;
+    margin-left: 14%;
+    margin-right: 15%;
 }
 
 .corpo .motivos .motivos-lista{
     margin-bottom: 2.5%;
     font-family: Verdana;
-    margin-left: 11.8%;
+    margin-left: 14%;
     margin-right: 13.2%;
     font-size: 16px;
 }
 
 .corpo .motivos .lista{
-    margin-right: 13.2%;
-    margin-left: 11.8%;
+    margin-right: 15%;
+    margin-left: 14%;
     margin-bottom: 1.25%;
 }
 
@@ -69,19 +70,19 @@ body{
 }
 
 hr{
-    margin-right: 13.2%;
-    margin-left: 11.8%;
+    margin-right: 15%;
+    margin-left: 14%;
 }
 
 .objetivos .obj{
     margin-top: 1.3%;
     font-family: Verdana;
     font-size: 16px;
-    margin-left: 11.8%;
-    margin-right: 13.2%;
+    margin-left: 14%;
+    margin-right: 15%;
 }
 
 .objetivos .texto-obj{
-    margin-right: 13.2%;
-    margin-left: 11.8%;
+    margin-right: 15%;
+    margin-left: 14%;
 }
